# Portaldopsi

./: .gitignore  DEPLOY.md  README.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: build-native.yml
apps/api/: .env.example  package.json
apps/api/prisma/: rls.sql  schema.prisma
apps/api/scripts/: seed-gad7.mjs  verify-rls.mjs
apps/api/src/: app.module.ts  main.ts
apps/api/src/admin/: admin-courses.controller.ts  admin-courses.service.ts  admin-token.guard.ts  admin.controller.ts  admin.module.ts  admin.service.ts
apps/api/src/ai/: ai.controller.ts  ai.service.ts
apps/api/src/appointments/: appointments.controller.ts  appointments.service.ts
apps/api/src/asaas/: asaas.controller.ts  asaas.module.ts  asaas.service.ts
apps/api/src/auth/: auth.controller.ts  auth.middleware.ts  auth.module.ts  auth.service.ts  (+3 more)
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: PLAYSTORE.md  README.md  STORE-LISTING.md  capacitor.config.ts  package.json
apps/mobile/www/: index.html
apps/web/: .env.local.example  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AdminNav.tsx  AgendaCalendar.tsx  DashboardNav.tsx  RegisterServiceWorker.tsx
apps/web/lib/: admin-api.ts  api.ts  firebase.ts  masks.ts  patient-api.ts  site-palettes.ts  specialty-options.ts
apps/web/public/: manifest.json  sw.js
apps/web/scripts/: generate-icons.js
(+584 files in other folders)
