[package]
name = "portal-do-psi"
version = "1.0.0"
description = "Portal do Psi — casca nativa desktop (abre o site publicado numa janela nativa)"
edition = "2021"

[lib]
name = "portal_do_psi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "portal-do-psi"
path = "src/main.rs"
